Add title pic & text

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="container">
                 <div class="header__body">
                     <a href="#" class="header__logo">
-                        <img src="http://via.placeholder.com/150" alt="logo">
+                        <img src="img/person.jpg" alt="logo">
                     </a>
                     <div class="header__button">
                         <span></span>
@@ -44,7 +44,25 @@
             </div>
         </header>
         <div class="title">
-            f
+            <img src="img/first_back.jpg" alt="title__img" class="title__img">
+            <div class="title__img-background">
+                <h1>
+                    Сайт врача нутрициолога Елены Сидоровой
+                </h1>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt incidunt eos, aut mollitia aspernatur dolorum quidem commodi pariatur, nobis adipisci obcaecati id possimus alias minus nisi suscipit at temporibus beatae!
+                </p>
+            </div>
         </div>
+        <section class="section">
+            <div class="info">
+                <div class="info__text">
+                    <h1>О враче</h1>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas reprehenderit facilis natus voluptatem perspiciatis adipisci assumenda suscipit iste ea dolores.</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis cumque ex eum velit et nam odio aliquid esse, fuga placeat.</p>
+                </div>
+                <img src="http:\\via.placeholder.com\150" alt="" class="info__img">
+            </div>
+        </section>
 </body>
 </html>
