Add 2 card-box and slider with slick

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
   integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
   crossorigin="anonymous"></script>
+    <script src="js/slick.js"></script>
     <script src="js/script.js"></script>
 </head>
 <body>
@@ -27,13 +28,13 @@
                                 <a  href="#" class="header__link">Главная</a>
                             </li>
                             <li>
-                                <a  href="#" class="header__link">О враче</a>
+                                <a  href="#about" class="header__link">О враче</a>
                             </li>
                             <li>
-                                <a  href="#" class="header__link">О нутрициологии</a>
+                                <a  href="#nutr" class="header__link">О нутрициологии</a>
                             </li>
                             <li>
-                                <a  href="#" class="header__link">Сертификаты</a>
+                                <a  href="#slid" class="header__link">Сертификаты</a>
                             </li>
                             <li>
                                 <a  href="#" class="header__link">Консультации</a>
@@ -54,14 +55,43 @@
                 </p>
             </div>
         </div>
-        <section class="section">
+        <section class="section" id="about">
             <div class="info">
                 <div class="info__text">
                     <h1>О враче</h1>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas reprehenderit facilis natus voluptatem perspiciatis adipisci assumenda suscipit iste ea dolores.</p>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis cumque ex eum velit et nam odio aliquid esse, fuga placeat.</p>
                 </div>
-                <img src="http:\\via.placeholder.com\150" alt="" class="info__img">
+                <img src="http:\\via.placeholder.com\150" alt="info__img" class="info__img">
+            </div>
+        </section>
+        <section class="section" id="nutr">
+            <div class="info info2">
+                <img src="http:\\via.placeholder.com\150" alt="info__img" class="info__img">
+                <div class="info__text">
+                    <h1>О нутрициологии</h1>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas reprehenderit facilis natus voluptatem perspiciatis adipisci assumenda suscipit iste ea dolores.</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis cumque ex eum velit et nam odio aliquid esse, fuga placeat.</p>
+                </div>
+                </div>
+        </section>
+        <section class="section" id="slid">
+            <div class="slider">
+                <h1>Сертификаты</h1>
+                <div class="slider__main">
+                    <div class="slider__item">
+                        <img src="img/sl1.jpg" alt="slider__item">
+                    </div>
+                    <div class="slider__item">
+                        <img src="img/sl2.jpg" alt="slider__item">
+                    </div>
+                    <div class="slider__item">
+                        <img src="img/sl3.jpg" alt="slider__item">
+                    </div>
+                    <div class="slider__item">
+                        <img src="img/sl4.jpg" alt="slider__item">
+                    </div>
+                </div>
             </div>
         </section>
 </body>
