Add comments, finish slider and start footer

--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas reprehenderit facilis natus voluptatem perspiciatis adipisci assumenda suscipit iste ea dolores.</p>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis cumque ex eum velit et nam odio aliquid esse, fuga placeat.</p>
                 </div>
-                <img src="http:\\via.placeholder.com\150" alt="info__img" class="info__img">
+                <img src="img/person.jpg" alt="info__img" class="info__img">
             </div>
         </section>
         <section class="section" id="nutr">
             <div class="info info2">
-                <img src="http:\\via.placeholder.com\150" alt="info__img" class="info__img">
+                <img src="img/nurt.jpg" alt="info__img" class="info__img">
                 <div class="info__text">
                     <h1>О нутрициологии</h1>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas reprehenderit facilis natus voluptatem perspiciatis adipisci assumenda suscipit iste ea dolores.</p>
@@ -94,5 +94,67 @@
                 </div>
             </div>
         </section>
+        <section class="section">
+            <div class="comments">
+                <h1>
+                    Отзывы клиентов
+                </h1>
+                <div class="comments__main">
+                    <div class="comments__item">
+                        <div class="item__header">
+                            <img src="https://thispersondoesnotexist.com/image" alt="person">
+                            <h1>Lorem ipsum</h1>
+                        </div>
+                        <div class="item__text">
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem tenetur minus quo sunt fugit necessitatibus blanditiis eos maxime nostrum nulla, est eius! Voluptates minus suscipit, reprehenderit placeat illo sapiente perferendis iure ab nihil error laudantium expedita provident architecto eveniet numquam laborum eius velit quisquam quibusdam? Aspernatur recusandae rerum necessitatibus debitis.</p>
+                        </div>
+                    </div>
+                    <div class="comments__item">
+                        <div class="item__header">
+                            <img src="https://thispersondoesnotexist.com/image" alt="person">
+                            <h1>Lorem ipsum</h1>
+                        </div>
+                        <div class="item__text">
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem tenetur minus quo sunt fugit necessitatibus blanditiis eos maxime nostrum nulla, est eius! Voluptates minus suscipit, reprehenderit placeat illo sapiente perferendis iure ab nihil error laudantium expedita provident architecto eveniet numquam laborum eius velit quisquam quibusdam? Aspernatur recusandae rerum necessitatibus debitis.</p>
+                        </div>
+                    </div>
+                    <div class="comments__item">
+                        <div class="item__header">
+                            <img src="https://thispersondoesnotexist.com/image" alt="person">
+                            <h1>Lorem ipsum</h1>
+                        </div>
+                        <div class="item__text">
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem tenetur minus quo sunt fugit necessitatibus blanditiis eos maxime nostrum nulla, est eius! Voluptates minus suscipit, reprehenderit placeat illo sapiente perferendis iure ab nihil error laudantium expedita provident architecto eveniet numquam laborum eius velit quisquam quibusdam? Aspernatur recusandae rerum necessitatibus debitis.</p>
+                        </div>
+                    </div>
+                    <div class="comments__item">
+                        <div class="item__header">
+                            <img src="https://thispersondoesnotexist.com/image" alt="person">
+                            <h1>Lorem ipsum</h1>
+                        </div>
+                        <div class="item__text">
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem tenetur minus quo sunt fugit necessitatibus blanditiis eos maxime nostrum nulla, est eius! Voluptates minus suscipit, reprehenderit placeat illo sapiente perferendis iure ab nihil error laudantium expedita provident architecto eveniet numquam laborum eius velit quisquam quibusdam? Aspernatur recusandae rerum necessitatibus debitis.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <footer class="footer">
+            <div class="footer__col">
+                <h1>а</h1>
+                <div class="footer__links">
+
+                </div>
+            </div>
+            <div class="footer__col">
+                <h1>а</h1>
+                <div class="footer__links">
+
+                </div>
+            </div>
+            <div class="copyright">
+                &copy2021
+            </div>
+        </footer>
 </body>
 </html>
