Fix thanx to Misha

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
             </div>
         </header>
         <div class="title">
-            <img src="img/first_back.jpg" alt="title__img" class="title__img">
             <div class="title__img-background">
                 <h1>
                     Сайт врача нутрициолога Елены Сидоровой
@@ -54,6 +53,7 @@
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt incidunt eos, aut mollitia aspernatur dolorum quidem commodi pariatur, nobis adipisci obcaecati id possimus alias minus nisi suscipit at temporibus beatae!
                 </p>
             </div>
+            <img src="img/first_back.jpg" alt="title__img" class="title__img">
         </div>
         <section class="section" id="about">
             <div class="info">
@@ -141,15 +141,28 @@
         </section>
         <footer class="footer">
             <div class="footer__col">
-                <h1>а</h1>
+                <h1>Контакты</h1>
                 <div class="footer__links">
-
+                    <p>
+                        Телефон:  <a href="tel:+74951234567">+7 (495) 123-45-67</a>
+                    </p>
+                    <p>
+                        Telegram: <a href="tg://resolve?domain=@Brrrah">Написать в Телеграм</a>
+                    </p>
+                    <p>
+                        Viber: <a href="viber://add?number=380936852492">Написать в Viber</a>
+                    </p>
                 </div>
             </div>
             <div class="footer__col">
-                <h1>а</h1>
+                <h1>Навигация по сайту</h1>
                 <div class="footer__links">
-
+                    <p>
+                        <a href="#">Главная</a>
+                    </p>
+                    <p>
+                        <a href="#">Консультации</a>
+                    </p>
                 </div>
             </div>
             <div class="copyright">
