Finish main and add pure form

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Сайт врача нутрициолога ________ ____________</title>
+    <title>Сайт врача нутрициолога Елены Сидоровой</title>
     <link rel="stylesheet" href="css/style.css">
     <script
   src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
@@ -25,19 +26,19 @@
                     <nav class="header__menu">
                         <ul class="header__list">
                             <li>
-                                <a  href="#" class="header__link">Главная</a>
+                                <a  href="index.html#" class="header__link">Главная</a>
                             </li>
                             <li>
-                                <a  href="#about" class="header__link">О враче</a>
+                                <a  href="index.html#about" class="header__link">О враче</a>
                             </li>
                             <li>
-                                <a  href="#nutr" class="header__link">О нутрициологии</a>
+                                <a  href="index.html#nutr" class="header__link">О нутрициологии</a>
                             </li>
                             <li>
-                                <a  href="#slid" class="header__link">Сертификаты</a>
+                                <a  href="index.html#slid" class="header__link">Сертификаты</a>
                             </li>
                             <li>
-                                <a  href="#" class="header__link">Консультации</a>
+                                <a  href="form.html" class="header__link">Консультации</a>
                             </li>
                         </ul>
                     </nav>
@@ -50,7 +51,7 @@
                     Сайт врача нутрициолога Елены Сидоровой
                 </h1>
                 <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt incidunt eos, aut mollitia aspernatur dolorum quidem commodi pariatur, nobis adipisci obcaecati id possimus alias minus nisi suscipit at temporibus beatae!
+                    "Мы не для того живем, чтобы есть, а едим для того, что бы жить." - &copyСократ 
                 </p>
             </div>
             <img src="img/first_back.jpg" alt="title__img" class="title__img">
@@ -70,10 +71,21 @@
                 <img src="img/nurt.jpg" alt="info__img" class="info__img">
                 <div class="info__text">
                     <h1>О нутрициологии</h1>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas reprehenderit facilis natus voluptatem perspiciatis adipisci assumenda suscipit iste ea dolores.</p>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis cumque ex eum velit et nam odio aliquid esse, fuga placeat.</p>
+                    <p>Нутрициология - это наука, направленная на изучение функциональных, метаболических, гигиенических и клинических аспектов взаимодействия питательных веществ и то, как они влияют на организм.</p>
+                    <p>В отличие от диетологии, нутрициология не занимается изучением и подбором питания для сохранения здоровья при различных патологиях, а также отличается комплексным подходом к изучению проблемы питания.</p>
                 </div>
                 </div>
+        </section>
+        <section class="section">
+            <div class="info">
+                <div class="info__text">
+                    <h1>Пару советов от врача</h1>
+                    <p>1) Не спеши в магазине, изучай состав и помни, то, что очень дешево стоит – обычно самое вредное.</p>
+                    <p>2) Не только калорийность важна, но и соотношение белков/углеводов/жиров, которые мы потребляем.</p>
+                    <p>3) Не стоит фанатически отказываться от всего вредного на 100%</p>
+                </div>
+                <img src="img/advice.jpg" alt="info__img" class="info__img">
+            </div>
         </section>
         <section class="section" id="slid">
             <div class="slider">
@@ -158,10 +170,10 @@
                 <h1>Навигация по сайту</h1>
                 <div class="footer__links">
                     <p>
-                        <a href="#">Главная</a>
+                        <a href="index.html#">Главная</a>
                     </p>
                     <p>
-                        <a href="#">Консультации</a>
+                        <a href="form.html">Консультации</a>
                     </p>
                 </div>
             </div>
