--- a/form.html
+++ b/form.html
@@ -16,7 +16,7 @@
         <header class="header">
             <div class="container">
                 <div class="header__body">
-                    <a href="#" class="header__logo">
+                    <a href="#contact" class="header__logo">
                         <img src="img/person.jpg" alt="logo">
                     </a>
                     <div class="header__button">
@@ -57,13 +57,13 @@
                   </div>
             </div>
             <div class="form__msg">
-              <label for="msg">Задайте вопрос:</label>
+              <label for="msg">Ваш вопрос:</label>
               <textarea id="msg" name="user_message"></textarea>
               <button type="submit">Отправить</button>
             </div>
         </form>
         <footer class="footer">
-            <div class="footer__col">
+            <div class="footer__col" id="contact">
                 <h1>Контакты</h1>
                 <div class="footer__links">
                     <p>
