--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <header class="header">
             <div class="container">
                 <div class="header__body">
-                    <a href="#" class="header__logo">
+                    <a href="index.html#contact" class="header__logo">
                         <img src="img/person.jpg" alt="logo">
                     </a>
                     <div class="header__button">
@@ -152,7 +152,7 @@
             </div>
         </section>
         <footer class="footer">
-            <div class="footer__col">
+            <div class="footer__col" id="contact">
                 <h1>Контакты</h1>
                 <div class="footer__links">
                     <p>
