--- a/form.html
+++ b/form.html
@@ -49,11 +49,11 @@
             <div class="form__data">
                   <div>
                     <label for="name">Ваше имя:</label>
-                    <input type="text" id="name" name="user_name" />
+                    <input type="text" id="name" name="user_name" autocomplete="off">
                   </div>
                   <div>
                     <label for="mail">Почта:</label>
-                    <input type="email" id="mail" name="user_email" />
+                    <input type="email" id="mail" name="user_email" autocomplete="off">
                   </div>
             </div>
             <div class="form__msg">
