--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     Сайт врача нутрициолога Елены Сидоровой
                 </h2>
                 <p>
-                    "Мы не для того живем, чтобы есть, а едим для того, что бы жить." - &copy Сократ 
+                    "Мы не для того живем, чтобы есть, а едим для того, что бы жить." - Сократ&copy 
                 </p>
             </div>
             <img src="img/first_back.jpg" alt="title__img" class="title__img">
@@ -178,7 +178,7 @@
                 </div>
             </div>
             <div class="copyright">
-                &copy 2021
+                2021&copy
             </div>
         </footer>
 </body>
