--- a/form.html
+++ b/form.html
@@ -89,7 +89,7 @@
                 </div>
             </div>
             <div class="copyright">
-                2021&copy
+                2021&copy;
             </div>
         </footer>
 </body>
